<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_result"
    tools:context="com.app.nupace.presentation.view.SignUpScreen">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/title_register"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="text"
        android:background="@drawable/baseline_button"
        android:drawableStart="@drawable/baseline_name"
        android:hint="@string/name"
        android:autofillHints="name"
        android:maxLines="1"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/baseline_button"
        android:drawableStart="@drawable/baseline_email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:paddingStart="12dp"
        android:layout_marginTop="5dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_name" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/baseline_button"
        android:drawableStart="@drawable/baseline_lock"
        android:autofillHints="password"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

    <EditText
        android:id="@+id/edt_confirm_password"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/baseline_button"
        android:drawableStart="@drawable/baseline_lock"
        android:layout_marginTop="5dp"
        android:hint="@string/confirm_password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_password" />

    <TextView
        android:id="@+id/btn_register"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:background="@drawable/custom_input"
        android:layout_marginTop="5dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>