<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_result"
    tools:context="com.app.nupace.presentation.view.UpdatePassword">

    <TextView
        android:id="@+id/tv_update_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:textColor="@color/white"
        android:text="@string/validate_email"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="315dp"
        android:textColorHint="@color/white"
        android:background="@drawable/baseline_button"
        android:drawableStart="@drawable/baseline_email"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="emailAddress"
        android:hint="@string/insert_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/btn_update_password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/send_email"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email" />

</androidx.constraintlayout.widget.ConstraintLayout>