<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_result">

    <TextView
        android:id="@+id/title_nupace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/stats_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_nupace"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                android:hint="0"
                android:inputType="number"
                android:padding="35dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="40sp"
                android:importantForAutofill="no" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/edittext_tempo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                android:hint="0"
                android:textStyle="bold"
                android:inputType="number"
                android:padding="35dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_calc_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:background="@drawable/custom_input"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:textSize="35sp" />

</RelativeLayout>